--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
 @tailwind utilities;
 
 
+.adBanner {
+    background: url(./images/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
